--- a/CSS/index.css
+++ b/CSS/index.css
@@ -52,3 +52,30 @@ p{
 
     text-align: center;
 }
+
+.negrito{
+    background-color: rgb(25, 170, 180);
+    color: rgb(255, 255, 255);
+    width: 85vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.negrito li{
+    background-color: rgb(107, 204, 221);
+    color: rgb(255, 255, 255);
+    width: 85vh;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
+
+.negrito a{
+    display: block;
+    padding: auto;
+    color: white;
+}
+
+.negrito a:hover{
+   background-color: antiquewhite;
+}
