--- a/CSS/index.css
+++ b/CSS/index.css
@@ -12,6 +12,10 @@ h1{
     text-align: center;
 }
 
+h3{
+    text-align: center;
+}
+
 h2{
     margin-top: 20px;
     margin-left: 50px;
@@ -78,4 +82,5 @@ p{
 
 .negrito a:hover{
    background-color: antiquewhite;
+   
 }
