--- a/CSS/index.css
+++ b/CSS/index.css
@@ -43,7 +43,7 @@ p{
 .pito{
     background-color: antiquewhite;
 
-    font-display: ;
+    font-display: optional;
 
     padding-top: 30px;
     padding-left: 30px;
