--- a/css/index.css
+++ b/css/index.css
@@ -39,3 +39,16 @@ h1{
     }
     
 }
+
+.paperas{
+    width: 35%; /* for example */
+    margin: auto;
+}
+
+.carousel-inner > .item > img, 
+.carousel-inner > .item > a > img{
+width: 50%; /* use this, or not */
+margin: auto;
+
+background-color: black;
+}
